# Computer-Graphics-Course-Project

./: README.md
1 - Matrix Basic & Image Compression/: CMakeLists.txt  compile_run.sh  main.cpp
2 - Coordinates Transformation/: CMakeLists.txt  compile_run.sh  main.cpp
3 - Texture Sampler/: compile_run.sh
3 - Texture Sampler/src/: drawrend.cpp  rasterizer.cpp  texture.cpp  transforms.cpp
4 - Mesh/bzc/: curve2.bzc
4 - Mesh/src/: student_code.cpp
5 - Ray Tracing/src/application/: visual_debugger.cpp
5 - Ray Tracing/src/pathtracer/: bsdf.cpp  camera.cpp  pathtracer.cpp
5 - Ray Tracing/src/scene/: bbox.cpp  bvh.cpp  sphere.cpp  triangle.cpp
